--- a/css/css.css
+++ b/css/css.css
@@ -3,11 +3,11 @@ body{
 }
 .main{
 	width: 1150px;
-	height: 800px;
+	height: 100%;
 	margin: auto;
 	margin-top: 5%;
 	border: 2px solid black;
-	border-radius: 5%;
+	border-radius: 50px;
 	text-align: center;
 	color: white;
 	background-color: #005080;
@@ -18,9 +18,13 @@ body{
 	padding: 10px;
 	font-family: 'KoHo', sans-serif;
 }
+#menuButt{
+	height: 720px;
+}
 #tu_jestes{
 	color: #50C5CF;
 	font-size: 17px;
+	background-color: rgb(48.41% 0.82% 20.94%);
 }
 .button{
 	width: 460px;
@@ -31,16 +35,17 @@ body{
 	float: left;
 	font-family: 'KoHo', 'Newsreader', serif;
 	background-color: rgb(40.31% 0.52% 20.54%);
-	border-radius: 50%;
+	border-radius: 40px;
 	transition: 2s;
 }
 a{
 	color: #37F0D7;
+	text-decoration: none;
 }
 a :hover{
 	background-color: #99284B;
 	color: #50C5CF;
-	font-size: 18px;
+	font-size: 17px;
 	cursor: pointer;
 }
 .kopytko{
@@ -53,6 +58,7 @@ a :hover{
 .menu{
 	width: 460px;
 	margin: auto;
+	height: 80px;
 }
 .button2{
 	width: 100px;
@@ -63,7 +69,7 @@ a :hover{
 	font-family: 'KoHo', 'Newsreader', serif;
 	background-color: rgb(40.31% 0.52% 20.54%);
 	border-radius: 50%;
-	transition: 2s;
+	transition: 1.2s;
 }
 #main_b{
 	height: 40px;
@@ -76,31 +82,16 @@ a :hover{
 }
 ul{
 	list-style-type: none;
-	font: 17px 'Newsreader';
+	font-size: 17px;
+	font-family: 'Newsreader';
 	line-height: 1.2;
 }
 p{
-	font: 18px 'Newsreader';
+	font-size: 18px;
+	font-family: 'Newsreader';
 	line-height: 1.4;
 }
-#s1{
-	height: 1080px;
-}
-#s4{
-	height: 950px;
-}
-#s5{
-	height: 2500px;
-}
-#s6{
-	height: 1080px;
-}
-#s7{
-	height: 1970px;
-}
-#s8{
-	height: 2750PX;
-}
+
 /*wymiary obrazów na stronach*/
 .w1{
 	width: 1000px;
@@ -119,4 +110,33 @@ p{
 }
 .w6{
 	width: 600px;
+}
+#rick :hover{
+	background-color: transparent;
+	cursor: wait;
+}
+/*dodatkowa zawartość*/
+#gry{
+	margin: 60px 0;
+	height: 350;
+}
+.og{
+	width: 300px;
+}
+#snejk{
+	background-color: lightgray;
+	color: blue;
+	width: 350px;
+	padding: 20px;
+	border-radius: 20px;
+	font-family: 'KoHo';
+	display: inline-block;
+	margin: auto;
+	font-size: 20px;
+	transition: 2s;
+}
+a:hover #snejk{
+	color: #37F0D7;
+	background-color: darkgray;
+	font-size: 23px;
 }
