--- a/css/css.css
+++ b/css/css.css
@@ -1,5 +1,5 @@
 body{
-	background-color: #009183;
+	background: linear-gradient(90deg, rgba(27,156,214,1) 0%, rgba(74,66,191,1) 33%, rgba(209,159,105,1) 77%, rgba(172,201,129,1) 100%);
 }
 .main{
 	width: 1150px;
@@ -9,14 +9,15 @@ body{
 	border: 2px solid black;
 	border-radius: 50px;
 	text-align: center;
-	color: white;
-	background-color: #005080;
+	color: black;
+	background: linear-gradient(40deg, rgba(27,156,214,1) 0%, rgba(172,201,129,1) 100%);
 	cursor: crosshair;
 }
 
 .title{
 	padding: 10px;
 	font-family: 'KoHo', sans-serif;
+	color: white;
 }
 #menuButt{
 	height: 720px;
@@ -91,10 +92,16 @@ p{
 	font-family: 'Newsreader';
 	line-height: 1.4;
 }
-
+p#origin a{
+	color: black;
+	transition: 1s;
+}
+p#origin a:hover{
+	color: yellow;
+}
 /*wymiary obrazów na stronach*/
 .w1{
-	width: 1000px;
+	width: 900px;
 }
 .w2{
 	width: 400px;
@@ -114,6 +121,9 @@ p{
 #rick :hover{
 	background-color: transparent;
 	cursor: wait;
+}
+.w7{
+	width: 100px;
 }
 /*dodatkowa zawartość*/
 #gry{
@@ -139,4 +149,19 @@ a:hover #snejk{
 	color: #37F0D7;
 	background-color: darkgray;
 	font-size: 23px;
+	transition: 2s;
+}
+#og1{
+	font-size: 19px;
+	color: black;
+	background-color: transparent;
+	visibility: none;
+	opacity: 0;
+	position: absolute;
+	top: 530px;
+	left: 1170px;
+}
+a:hover #snejk #og1{
+	opacity: 1;
+	transition: 2s;
 }
